if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    set(PTHREAD pthread)
    set(DL	dl)
    set(RT	rt)
    set(LUALIB	luajit)
else(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    set(LUALIB	lua51lib)
endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")

include_directories(../)
link_directories(../lib/${CMAKE_BUILD_TYPE})
set(EXECUTABLE_OUTPUT_PATH ../../bin/${CMAKE_BUILD_TYPE})
set(LIBRARY_OUTPUT_PATH ../../bin/${CMAKE_BUILD_TYPE})

add_executable(test_datetime test_datetime.cpp)
target_link_libraries(test_datetime common gtest ${PTHREAD})
add_executable(test_luausage test_luausage.cpp)
target_link_libraries(test_luausage common gtest ${LUALIB} ${DL})
add_executable(test_luabench test_luabench.cpp)
target_link_libraries(test_luabench common gtest ${LUALIB} ${DL})
add_executable(test_ipc test_ipc.cpp)
target_link_libraries(test_ipc common gtest ${PTHREAD} ${RT})
